syntax = "proto3";

import "proto/context.proto";

package secrets;

message PublicKey {
  // The unique ID of this public key.
  string id = 1;

  // The string value of this public key which should be used to seal anonymous
  // secrets uploaded to BuildBuddy.
  string value = 2;
}

message Secret {
  // The environment variable name for this secret.
  string name = 1;

  // The encrypted value of this secret.
  string value = 2;
}

message GetPublicKeyRequest {
  context.RequestContext request_context = 1;
}

message GetPublicKeyResponse {
  context.ResponseContext response_context = 1;

  // The PublicKey associated with this org.
  PublicKey public_key = 2;
}

message ListSecretsRequest {
  context.RequestContext request_context = 1;

  // No filters. 100 secrets max. Read em all.
}

message ListSecretsResponse {
  context.ResponseContext response_context = 1;

  // The Secrets owned by the org.
  repeated Secret secret = 2;
}

message UpdateSecretRequest {
  context.RequestContext request_context = 1;

  Secret secret = 2;
}

message UpdateSecretResponse {
  context.ResponseContext response_context = 1;
}

message DeleteSecretRequest {
  context.RequestContext request_context = 1;

  Secret secret = 2;
}

message DeleteSecretResponse {
  context.ResponseContext response_context = 1;
}
